# stryke-spark

./: .gitignore  Cargo.toml  Makefile  README.md  stryke.toml
.github/workflows/: ci.yml  release.yml
docs/: index.html  report.html
examples/: discover.stk  parquet_pipeline.stk  quick_query.stk  range_stats.stk  sql_explain.stk
lib/: Spark.stk
src/: driver.py  lib.rs  main.rs
t/: test_spark.stk  test_stryke_spark_surface.stk
tests/: contract_cli_round4.rs
