[package]
name = "stryke-spark-helper"
version = "0.1.0"
edition = "2021"
description = "Apache Spark bridge binary for the stryke `spark` package."
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-spark"
publish = false

[[bin]]
name = "stryke-spark-helper"
path = "src/main.rs"

[dependencies]
clap = { version = "4", default-features = false, features = [
    "std", "derive", "help", "usage", "error-context", "env",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
