[package]
name = "stryke-spark"
version = "0.10.0"
edition = "2021"
description = "Apache Spark cdylib for the stryke `spark` package — dlopened in-process via stryke's FFI bridge"
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-spark"
homepage = "https://menketechnologies.github.io/stryke-spark/"
publish = false

[lib]
name = "stryke_spark"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
tempfile = "3"
once_cell = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
